--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Vue Project</title>
 </head>
 <body>
-	<!-- Called the Getter Method for Computer Properties -->
+	<!-- Computer Properties -->
 	<div id="app" class="container">
 	<div class="row">
 		<div class="col-md-12 text-center">
@@ -36,7 +36,25 @@
 				<input type="text" class="form-control" v-model="last" />
 			</div>	
 		</div>
-	</div>		
+</div>		
+
+	<hr />	
+
+<div id="app2" class="container">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<h1>I am <strong></strong></h1>
+			<h3>Number of meals: {{meals}}</h3>
+		</div>
+	</div>
+	<div class="row">
+		<div id="buttons">
+			<button type="button" v-on:click="addMeals">Add meals</button>
+			<button type="button" v-on:click="decreaseMeals">Decrease meals</button>
+		</div>	
+	</div>			
+		
+</div>		
 
 
 
@@ -56,7 +74,21 @@
 		fullmeal: function() {
 			return this.first + " and " + this.last
 		}
-	}	
+	}
+})
+	var app = new Vue({
+		el: '#app2',
+		data: {
+			meals: 1
+		},
+		methods: {
+			addMeals: function() {
+				return this.meals += 1
+			},
+			decreaseMeals: function() {
+				return this.meals -= 1
+			}
+		}	
 	})
 
 </script>
