--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="app2" class="container">
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h1>I am <strong></strong></h1>
+			<h1>I am <strong>{{level}}</strong></h1>
 			<h3>Number of meals: {{meals}}</h3>
 		</div>
 	</div>
@@ -74,9 +74,8 @@
 		fullmeal: function() {
 			return this.first + " and " + this.last
 		}
-	}
-})
-	var app = new Vue({
+	},
+	
 		el: '#app2',
 		data: {
 			meals: 1
@@ -87,6 +86,19 @@
 			},
 			decreaseMeals: function() {
 				return this.meals -= 1
+			}
+		},
+		computed: {
+			level: function() {
+				if (this.meals >= 10) {
+					return "Bloated"
+				} else if (this.meals >= 5) {
+					return "Full"
+				} else if (this.meals >= 0) {
+					return "Hungry"
+				} else {
+					return "Famished"
+				}
 			}
 		}	
 	})
